# Popsicle

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  zombienet.sh
.github/workflows/: rust.yml
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  container_task.rs  main.rs  rpc.rs  service.rs
pallets/container/: Cargo.toml
pallets/container/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/sequencer-grouping/: Cargo.toml
pallets/sequencer-grouping/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/sequencer-staking/: Cargo.toml
pallets/sequencer-staking/src/: benchmarking.rs  delegation_requests.rs  lib.rs  mock.rs  set.rs  tests.rs  traits.rs  types.rs  weights.rs
pallets/template/: Cargo.toml
primitives/container/: Cargo.toml
primitives/container/src/: lib.rs
runtime/: Cargo.toml
runtime/common/src/: blocks.rs  currency.rs  lib.rs
runtime/popsicle/: Cargo.toml
runtime/popsicle/src/: lib.rs  xcm_config.rs
runtime/popsicle/src/weights/: mod.rs
runtime/src/: blocks.rs  currency.rs  lib.rs
zombienet-config/: README.md  integration-tests-config.toml  rococo-local-config.toml
