[package]
name = "pallet-sequencer-grouping"
authors = { workspace = true }
description = "pallet for grouping sequencers"
edition = "2021"
version = "3.0.0"

[dependencies]
log = { workspace = true }
serde = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { workspace = true, features = [ "derive" ] }
scale-info = { workspace = true, features = [ "derive" ] }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
rand_chacha = "0.3.1"

[dev-dependencies]
pallet-balances = { workspace = true, features = [ "insecure_zero_ed", "std" ] }
sp-core = { workspace = true, features = [ "std" ] }
sp-io = { workspace = true, features = [ "std" ] }
sp-runtime = { workspace = true }
pallet-insecure-randomness-collective-flip = { version = "18.0.0" }

[features]
default = [ "std" ]
std = [
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-insecure-randomness-collective-flip/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = [ "frame-benchmarking" ]
try-runtime = [ "frame-support/try-runtime" ]

