[package]
name = "pallet-sequencer-grouping"
authors = { workspace = true }
description = "pallet for grouping sequencers"
edition = "2021"
version = "3.0.0"

[dependencies]
log = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false }

# Substrate
frame-benchmarking = { workspace = true, default-features = false, optional = true }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
parity-scale-codec = { workspace = true,  default-features = false, features = [ "derive" ] }
scale-info = { workspace = true, default-features = false, features = [ "derive" ] }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true, default-features = false, features = [ "insecure_zero_ed", "std" ] }
sp-core = { workspace = true, default-features = false, features = [ "std" ] }
sp-io = { workspace = true, default-features = false, features = [ "std" ] }
sp-runtime = { workspace = true, default-features = false }

[features]
default = [ "std" ]
std = [
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = [ "frame-benchmarking/runtime-benchmarks" ]
try-runtime = [ "frame-support/try-runtime" ]

