[package]
name = "primitives-container"
authors= { workspace = true }
edition = { workspace = true }
license = { workspace = true }
version = "0.1.0"

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std ={ workspace = true }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-api/std",
	"scale-info/std",
	"sp-std/std",
]